test/good/23.cc
void iAmNothing() {}

int main()
{
    return 1;
}

