test/bad/2.cc
int main()
{
    int x, y, z;
    x = "hey!";
    return 0;
}